--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -33,7 +33,7 @@ LOG_FILE = "/tmp/completion.log"
 
 [[language]]
 name = "python"
-language-servers = ["scls", "pylsp"]
+language-servers = ["scls", "basedpyright", "ruff"]
 
 # append language server to existed languages
 [[language]]
@@ -50,7 +50,17 @@ roots = []
 auto-format = false
 language-servers = [ "scls" ]
 
-# set formater for me, have to inject ruff and black with pipx!
-[language-server.pylsp.config.pylsp]
-plugins.ruff.enabled = true
-plugins.black.enabled = true
+[language-server.basedpyright]
+command = "basedpyright-langserver"
+args = ["--stdio"]
+except-features = ["format", "code-action"]
+
+[language-server.basedpyright.config.basedpyright.analysis]
+autoSearchPaths = true
+typeCheckingMode = "basic"
+diagnosticMode = "openFilesOnly"
+
+[language-server.ruff]
+command = "ruff"
+args = ["server", "--preview"]
+
