--- a/helix/config.toml
+++ b/helix/config.toml
@@ -46,7 +46,7 @@ f = ":format"
 w = ":wa"
 W = ":wqa"
 x = ":qa"
-x = ":wqa!"
+X = ":wqa!"
 
 [editor.inline-diagnostics]
 cursor-line = "warning" # show warnings and errors on the cursorline inline
