--- a/workstyle/config.toml
+++ b/workstyle/config.toml
@@ -16,6 +16,7 @@
 "floorp" = ""
 "chrome" = ""
 "thunar" = ""
+"yazi" = ""
 "libreoffice calc" = ""
 "libreoffice writer" = ""
 "libreoffice" = ""
