--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -35,7 +35,7 @@ LOG_FILE = "/tmp/completion.log"
 
 [[language]]
 name = "python"
-language-servers = ["scls", "jedi"]
+language-servers = ["scls", "basedpyright", "ruff"]
 
 # append language server to existed languages
 [[language]]
@@ -51,3 +51,17 @@ shebangs = []
 roots = []
 auto-format = false
 language-servers = [ "scls" ]
+
+[language-server.basedpyright]
+command = "basedpyright-langserver"
+args = ["--stdio"]
+except-features = ["format", "code-action"]
+
+[language-server.basedpyright.config.basedpyright.analysis]
+autoSearchPaths = true
+typeCheckingMode = "basic"
+diagnosticMode = "openFilesOnly"
+
+[language-server.ruff]
+command = "ruff"
+args = ["server", "--preview"]
