--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -99,15 +99,12 @@ outer.right = 8
 # alt-enter = 'exec-and-forget open -a Ghostty'
 
 # close and fullscreen keys
-cmd-q = 'close --quit-if-last-window'
-cmd-f = 'fullscreen --no-outer-gaps'
+cmd-shift-c = 'close --quit-if-last-window'
 cmd-t = 'exec-and-forget open -n -a ghostty --args -e nu'
 cmd-b = 'exec-and-forget open -n -a firefox --args -P'
-cmd-x = 'exec-and-forget open -a keepassxc'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 cmd-slash = 'layout tiles horizontal vertical'
-cmd-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 cmd-h = 'focus left'
@@ -122,8 +119,8 @@ cmd-shift-k = 'move up'
 cmd-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-cmd-minus = 'resize smart -50'
-cmd-equal = 'resize smart +50'
+cmd-comma = 'resize smart -50'
+cmd-period = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 cmd-1 = 'workspace 1'
@@ -136,10 +133,6 @@ cmd-7 = 'workspace 7'
 cmd-8 = 'workspace 8'
 cmd-9 = 'workspace 9'
 cmd-0 = 'workspace 10'
-cmd-a = 'workspace a'
-cmd-e = 'workspace e'
-cmd-i = 'workspace i'
-cmd-c = 'workspace c'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 cmd-shift-1 = 'move-node-to-workspace 1'
@@ -152,23 +145,14 @@ cmd-shift-7 = 'move-node-to-workspace 7'
 cmd-shift-8 = 'move-node-to-workspace 8'
 cmd-shift-9 = 'move-node-to-workspace 9'
 cmd-shift-0 = 'move-node-to-workspace 10'
-cmd-shift-a = 'move-node-to-workspace a'
-cmd-shift-e = 'move-node-to-workspace e'
-cmd-shift-i = 'move-node-to-workspace i'
-cmd-shift-c = 'move-node-to-workspace c'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-cmd-tab = 'workspace-back-and-forth'
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-cmd-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 cmd-shift-r = ['reload-config', 'mode main']
 
 [[on-window-detected]]
   if.app-name-regex-substring = 'Mattermost'
-  run = 'move-node-to-workspace i'
+  run = 'move-node-to-workspace 10'
 
 [[on-window-detected]]
   if.app-name-regex-substring = 'Safari'
-  run = 'move-node-to-workspace e'
+  run = 'move-node-to-workspace 9'
  
