--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -35,7 +35,7 @@ LOG_FILE = "/tmp/completion.log"
 
 [[language]]
 name = "python"
-language-servers = ["scls", "basedpyright", "ruff"]
+language-servers = ["basedpyright", "ruff"]
 
 # append language server to existed languages
 [[language]]
