--- a/zed/settings_backup.json
+++ b/zed/settings_backup.json
@@ -9,7 +9,7 @@
 {
   "ssh_connections": [
     {
-      "host": "coder.ewa",
+      "host": "coder.wes",
       "projects": [
         {
           "paths": [
@@ -106,29 +106,20 @@
   ],
   "vim_mode": true,
   "vim": {
-    "use_system_clipboard": "on_yank",
+    "use_system_clipboard": "never",
     "use_multiline_find": true,
     "use_smartcase_find": true,
     "toggle_relative_line_numbers": true,
     "highlight_on_yank_duration": 300
   },
   "auto_install_extensions": {
-    "html": true,
-    "dockerfile": true,
-    "docker-compose": true,
-    "tokyo-night": true,
-    "helm": true,
-    "graphql": true,
-    "ansible": true,
-    "lua": true,
-    "zig": true
+    "helm" : true,
+    "Dockerfile" : true,
+    "TOML" : true
   },
   "ui_font_size": 14,
   "buffer_font_size": 14,
-  "wrap_guides": [
-    80,
-    120
-  ],
+  "wrap_guides": [80, 120],
   // Disable cursor blink
   "cursor_blink": false,
   // Use relative line numbers
@@ -136,7 +127,7 @@
   // Prevent the buffer from scrolling beyond the last line
   "scroll_beyond_last_line": "off",
   // Allow the cursor to reach the edges of the screen
-  "vertical_scroll_margin": 12,
+  "vertical_scroll_margin": 8,
   "theme": {
     "mode": "system",
     "light": "One Light",
@@ -172,7 +163,7 @@
   "format_on_save": "off",
   "project_panel": {
     "indent_size": 30,
-    "default_width": 300,
+    "default_width": 200,
     "entry_spacing": "standard",
     "file_icons": true,
     "folder_icons": false,
@@ -245,7 +236,7 @@
     "quick_actions": false,
     "selections_menu": false
   },
-  "agent": {
+  "assistant": {
     "version": "2",
     "enabled": false
   },
@@ -267,7 +258,7 @@
   "line_indicator_format": "short",
   "terminal": {
     "shell": {
-      "program": "nu"
+      "program": "fish"
     },
     "detect_venv": {
       "on": {
@@ -281,7 +272,7 @@
           "venv"
         ],
         // Can also be `csh`, `fish`, and `nushell`
-        "activate_script": "nushell"
+        "activate_script": "fish"
       }
     },
     "dock": "right",
@@ -297,7 +288,7 @@
       "title": false,
       "breadcrumbs": false
     }
-  },
+ },
   "lsp": {
     "pyright": {
       "settings": {
