--- a/zed/tasks.json
+++ b/zed/tasks.json
@@ -3,19 +3,22 @@
 // Example:
 [
   {
-    "label": "File Finder",
-    "command": "zed \"$(tv files)\"",
-    "hide": "always",
-    "allow_concurrent_runs": true,
-    "use_new_terminal": true
+    "label": "lazygit",
+    "command": "lazygit",
+    "hide": "on_success",
+    "use_new_terminal": true,
+    "shell": {
+          "program": "/bin/bash"
+        }
   },
   {
-    "label": "Find in Files",
-    "command": "zed \"$(tv text)\"",
-    "hide": "always",
-    "allow_concurrent_runs": true,
-    "use_new_terminal": true
-  },
+      "label": "nushell",
+      "command": "nu",
+      "hide": "on_success",
+      "shell": {
+            "program": "/bin/bash"
+          }
+    },
   {
     "label": "Example task",
     "command": "for i in {1..5}; do echo \"Hello $i/5\"; sleep 1; done",
