fix python venv

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -190,5 +190,14 @@
     "toolbar": {
       "breadcrumbs": false
     }
+  },
+  "lsp": {
+    "pyright": {
+      "settings": {
+        "python": {
+          "pythonPath": ".venv/bin/python"
+        }
+      }
+    }
   }
 }
