tmux better binds

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ set -g prefix C-Space
 bind C-Space send-prefix
 unbind Space
 bind Space last-window
+unbind C-Space
+bind C-Space last-window
 
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 
